@startuml

title __UTIL's Class Diagram__\n

  package uk.ac.ebi.pride.utilities.util {
    class ApproximateComparator {
        - context : MathContext
        + ApproximateComparator()
        + ApproximateComparator()
        + compare()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class DateUtils {
        {static} + atStartOfDay()
        {static} + atEndOfDay()
        {static} - dateToLocalDateTime()
        {static} - localDateTimeToDate()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class IOUtilities {
        {static} - logger : Logger
        {static} + getFullPath()
        {static} + getFullPath()
        {static} + convertURLToFile()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class InternetChecker {
        {static} - logger : Logger
        {static} - WEBSITE_TO_TEST : String
        {static} + check()
        {static} + check()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class MoleculeUtilities {
        {static} - NO_PEPTIDE_REGEX : String
        {static} + cleanPeptideSequence()
        {static} + getAminoacid()
        {static} + isAminoAcidSequence()
        {static} + searchForAminoAcid()
        {static} + searchForPeptide()
        {static} + calculateTheoreticalMass()
        {static} + calculateDeltaMz()
        {static} + calculateDeltaMz()
        {static} + calculatePeptideMonoMass()
        {static} + calculatePeptideAvgMass()
        {static} - calculatePeptideMass()
        {static} + calculateMonoMass()
        {static} + calculateAvgMass()
        {static} + calcMissedCleavages()
        {static} + main()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class NumberUtilities {
        {static} + isNumber()
        {static} + isInteger()
        {static} + isNonNegativeInteger()
        {static} + scaleDouble()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class ProductIonFactory {
        {static} + createDefaultProductIons()
        {static} + createImmoniumProductIons()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class RegExUtilities {
        {static} + EMAIL_ADDRESS_PATTERN : Pattern
        {static} + getMatchedString()
        {static} + isValidEmail()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class StringUtils {
        {static} + NO_PEPTIDE_REGEX : String
        {static} + isEmpty()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class Triple {
        + Triple()
        + getFirst()
        + setFirst()
        + getSecond()
        + setSecond()
        + getThird()
        + setThird()
        + equals()
        + hashCode()
    }
  }
  

  package uk.ac.ebi.pride.utilities.util {
    class Tuple {
        - hashCode : int
        + Tuple()
        + getKey()
        + setKey()
        + getValue()
        + setValue()
        + equals()
        + hashCode()
        - computeHashCode()
    }
  }
  

  Triple -up-|> Serializable
  Triple o-- K : first
  Triple o-- V : second
  Triple o-- T : third
  Tuple -up-|> Serializable
  Tuple o-- K : key
  Tuple o-- V : value


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
